--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -72,29 +72,31 @@
 }
 
 #wf{
-    width: 200px;
-    height: 125px;
+    width: 160px;
+    height: 95px;
     background-size: 100% 100% !important;
     position: absolute;
-    top: 35px;
+    top: 30px;
     background: url("../image/png.png");
 }
 #wf3{
-    width: 150px;
-    height: 45px;
+    width: 130px;
+    height: 42px;
     background: crimson;
     color: white;
     border: 0;
+    font-size:13px:
     margin-top: 100px;
     cursor: pointer;
     border-radius: 5px;
 }
 #wf2{
-    width: 150px;
+    width: 130px;
     border-radius: 5px;
-    height: 50px;
+    height: 43px;
     background: #e1adad;
     border: 0;
+    font-size:13px:
     margin-top: 30px;
     color: white;
     cursor: pointer;
